---version 2.0.4 yet to be released---
08-mar-2009 - adelikat - Lua - memory.readbyte will recognize frozen addresses
08-mar-2009 - adelikat - Lua - added FCEU.lagged() function
08-mar-2009 - adelikat - Lua - added zapper.read() function
07-mar-2009 - adelikat - Lua - added FCEU.lagcount() function
04-mar-2009 - adelikat - win32 - Fix bug so that Escape can now be assigned as a hotkey
03-mar-2009 - adelikat - win32 - Fix Directory Overrides so to allow users to have no override.  Also fixes directory override reset bug
02-mar-2009 - adelikat - win32 - Drag & Drop for Memwatch dialog (.txt files)
01-mar-2009 - adelikat - win32 - Drag & Drop Lua files
25-feb-2009 - adelikat - win32 - Memwatch - added cancel to save changes? message box
22-feb-2009 - adelikat - win32 - Lua - made speedmode("turbo") turn on turbo (which employs frameskipping) rather than max speed
22-feb-2009 - adelikat - Increased lua gui.text height (and DrawTextTransWH() height)
21-feb-2009 - adelikat - win32 - Lua - Added -lua commandline argment, loads a lua script on startup
21-feb-2009 - adelikat - win32 - Debugger - Added pixel display after scanline display - Thanks to DWEdit for this patch
21-feb-2009 - adelikat - win32 - Debugger - Added Run Line, Run 128 Lines buttons - Thanks to DWEdit for this patch
21-feb-2009 - adelikat - win32 - Message Log - remembers X,Y position
19-feb-2009 - adelikat - win32 - Memory Watch - fixed recent file menu - no longer crashes when attempting to load a non existent recent file
07-feb-2009 - adelikat - win32 - Fix bug in screenshot numbering that caused numbering to not reset when changing ROMs
06-feb-2009 - adelikat - win32 - Hex editor - remembers window size
06-feb-2009 - adelikat - Win32 - sound config dialog - added sliders for individual sound channel volume control
06-feb-2009 - zeromus - Force processor affinity, fixes throttling problem on AMD dualcore machines
06-feb-2009 - adelikat - Sound channels now have individual volume control